After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660195 - GstDiscoverer: signals "discovered" and "finished" are only emitted in async mode
GstDiscoverer: signals "discovered" and "finished" are only emitted in async ...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.1.4
Assigned To: David Schleef
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-26 23:46 UTC by Age Bosma (IRC: Forage)
Modified: 2013-08-13 19:43 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Age Bosma (IRC: Forage) 2011-09-26 23:46:05 UTC
By looking at the code, GstDiscoverer only emits the signals "discovered" and "finished" in async mode. "started" on the other hand is emitted in both modes.

The fact that there is currently no mention of this behaviour in the documentation makes it confusing. Personally I think it should be all or nothing; all signals in both modes or non in blocking mode.

At least describe the intended behaviour in the documentation.
Comment 1 David Schleef 2011-12-09 01:58:41 UTC
Can you provide a patch for the documentation?
Comment 2 Edward Hervey 2013-08-13 18:44:36 UTC
This bug has an assigned developer but has not received activity in almost a year.

Is the assigned person still working on this ?
Comment 3 Tim-Philipp Müller 2013-08-13 19:43:40 UTC
Edward - a comment on the intention behind the signals would have been helpful.. ;)

 commit a34e0420b6c5baaaf4832dd3292e1e80da2fba19
 Author: Tim-Philipp Müller <tim@centricular.net>
 Date:   Tue Aug 13 20:39:15 2013 +0100

    discoverer: document that "finished" and "discovered" signals are only emitted in async mode
    
    https://bugzilla.gnome.org/show_bug.cgi?id=660195