discoverer: document that "finished" and "discovered" signals are only emitted in async mode

https://bugzilla.gnome.org/show_bug.cgi?id=660195